--- a/templates/show_apps.html
+++ b/templates/show_apps.html
@@ -7,9 +7,7 @@
 {% block js %}
   <script src="//cdnjs.cloudflare.com/ajax/libs/dropzone/4.3.0/min/dropzone.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/superagent/1.2.0/superagent.min.js"></script>
-{% assets 'js' %}
-  <script defer src="{{ ASSET_URL }}"></script>
-{% endassets %}
+  <script defer src="{{ url_for('static', filename='js/show_apps.js') }}"></script>
 {% endblock %}
 
 {% block title %}Apps{% endblock %}
